--- a/README.rdoc
+++ b/README.rdoc
@@ -1,27 +1,10 @@
-== README
+== Aardvark
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+= Env vars to set:
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+* ECHONEST_API_KEY
+* ECHONEST_CONSUMER_KEY
+* ECHONEST_SHARED_SECRET
 
 
 Please feel free to use a different markup language if you do not plan to run
